--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "engines": { "node": ">=20" },
   "dependencies": {
+    "@vercel/blob": "^0.18.1",
     "sharp": "^0.33.4"
   }
 }
