--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": { "node": ">=20" },
   "dependencies": {
     "@vercel/blob": "^0.18.1",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "formidable": "^2.1.1"
   }
 }
