--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "engines": { "node": ">=20" },
   "dependencies": {
-    "@vercel/blob": "^1.1.1",
+    "@vercel/blob": "1.1.1",
     "sharp": "^0.33.4",
     "formidable": "^2.1.1"
   }
